# libharmonics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  performance_suite.cpp
docs/: Accelerators.md  Architecture.md  BuiltInLayers.md  ClusterDeployment.md  ConstantSlab.md  CudaPipeline.md  DataTransports.md  Datasets.md  DistributedScheduler.md  IncrementalCompilationCache.md  Introspection.md  JavaScriptRuntime.md  ModelImportExport.md  Philosophy.md  PluginPackaging.md  Plugins.md  PythonBindings.md  Quantum.md  README.md  Runtime.md  RustFFI.md  ShaderBuild.md  SparkIntegration.md  Training.md
examples/: CMakeLists.txt  basic.cpp  cluster_client.cpp  cluster_server.cpp  distributed_dataset_cache_example.cpp  distributed_parameter_server_example.cpp  mnist.cpp  multi_gpu_training.cpp  performance_benchmark.cpp  quantum_backend_demo.cpp  quantum_backend_large.cpp  quantum_hardware_demo.cpp  quantum_hardware_large.cpp  quantum_hw_backend.cpp  quantum_hw_stub.cpp  quantum_stub_complex.cpp  quantum_stub_demo.cpp  quantum_stub_large.cpp  shader_wrapper_cli.cpp  shaders.cpp  shell.cpp  training_shaders.cpp  training_visualizer.cpp
examples/layer_plugin/: custom_layers.cpp
examples/plugin_example/: plugin_example.cpp  sample_plugin.cpp
examples/rust_ffi_example/: Cargo.toml
examples/rust_ffi_example/src/: main.rs
examples/rust_scheduler_example/: Cargo.toml
examples/rust_scheduler_example/src/: main.rs
examples/training_dashboard/: dashboard.html  server.js
grammar/: harp.peg
include/gpu/: GPUFunction.hpp  GlobalFunctionRegistry.hpp  Wrapper.h
include/harmonics/: arrow_dataset.hpp  async_producer.hpp  augmentation.hpp  compression.hpp  config.hpp  constant_slab.hpp  core.hpp  cuda_adapter.hpp  cuda_scheduler.hpp  cycle.hpp  dataset.hpp  dataset_cache.hpp  deployment.hpp  distributed_io.hpp  distributed_scheduler.hpp  dot_export.hpp  flight_io.hpp  fpga_backend.hpp  fpga_scheduler.hpp  function_registry.hpp  gpu_backend.hpp  graph.hpp  graph_diff.hpp  graph_edit.hpp  grpc_io.hpp  int8_activations.hpp  int8_math.hpp  introspection.hpp  javascript_bindings.hpp  jni_ffi.hpp  kernel_ffi.hpp  layers.hpp  memory_profiler.hpp  memory_usage.hpp  model_import.hpp  multi_accelerator_scheduler.hpp  net_utils.hpp  onnx_export.hpp  opencl_adapter.hpp  parser.hpp  (+29 more)
include/harmonics/gpu/cuda/: context.hpp
include/harmonics/gpu/vulkan/: context.hpp
include/onnx/: onnx_pb.h
logs/benchmarks/: performance.txt
logs/shader_reports/: adam_report.txt  barycentric_scores_report.txt  cross_entropy_loss_report.txt  fully_connected_report.txt  l2_distance_report.txt  relu_report.txt  rmsprop_report.txt  sgd_report.txt  sigmoid_report.txt
protos/: tensor_stream.proto
scripts/: check-determinism.sh  compile_shaders.sh  format.sh  gpu_test_shaders.sh  run-benchmarks.sh  run-tests-all.sh  run-tests.sh
shaders/: .gitignore  adam.comp  avg_pool.comp  barycentric_scores.comp  cross_entropy_loss.comp  fully_connected.comp  int8_matmul.comp  l2_distance.comp  max_pool.comp  mse_loss.comp  prelu.comp  relu.comp  rmsprop.comp  selu.comp  sgd.comp  sigmoid.comp
src/: dataset_cache_cli.cpp  dataset_convert.cpp  dataset_schema_cli.cpp  graph_cli.cpp  graph_debugger.cpp  graph_diff_tool.cpp  graph_info_cli.cpp  harmonics.cpp  javascript_bindings.cpp  jni_bindings.cpp  model_convert.cpp  plugin_packager.cpp  python_bindings.cpp  rust_ffi.cpp
tests/: CMakeLists.txt  accelerator_auto_test.cpp  accelerator_selection_cpu_test.cpp  accelerator_selection_gpu_test.cpp  accelerator_selection_wasm_test.cpp  activation_library_test.cpp  async_producer_test.cpp  augmentation_test.cpp  auto_partition_test.cpp  cli_options_test.cpp  constant_slab_integration_test.cpp  cross_target_determinism_test.cpp  cuda_backend_enabled_test.cpp  cuda_backend_test.cpp  cuda_device_test.cpp  cuda_kernel_cache_test.cpp  cycle_runtime_test.cpp  dataset_cache_cli_test.cpp  dataset_producer_test.cpp  dataset_schema_cli_test.cpp  distributed_io_test.cpp  distributed_scheduler_test.cpp  dummy_test.cpp  flight_io_test.cpp  fp_lr_schedule_test.cpp  fpga_backend_test.cpp  fpga_fallback_test.cpp  fpga_kernel_compiler_test.cpp  function_registry_test.cpp  function_registry_thread_test.cpp  gpu_backend_test.cpp  gpu_fallback_test.cpp  gpu_fpga_fallback_integration_test.cpp  gpu_kernel_api_test.cpp  gpu_kernel_compiler_test.cpp  gpu_memory_pool_test.cpp  gpu_shader_wrapper_test.cpp  graph_debugger_test.cpp  graph_diff_test.cpp  graph_edit_test.cpp  (+62 more)
tests/gtest/: gtest.h
